force-app/main/default/objects/blng__Usage__c/fields/PreratedUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>PreratedUnitPrice__c</fullName>
    <label>Prerated Unit Price</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>