force-app/main/default/objects/blng__Usage__c/fields/UnitPriceNew__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceNew__c</fullName>
    <formula>IF((PreratedUnitPrice__c)&gt; 0, PreratedUnitPrice__c,blng__UnitPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price New</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>