force-app/main/default/objects/blng__Usage__c/fields/UsageSystem__c.field-meta.xml
<CustomField>
    <fullName>UsageSystem__c</fullName>
    <label>Usage System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APP</fullName>
            </value>
            <value>
                <fullName>COL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>